Bug 145413 - CSS Selector Dialogue: after saving, one entry is missing... ie5-mac-hack
Summary: CSS Selector Dialogue: after saving, one entry is missing... ie5-mac-hack
Status: RESOLVED FIXED
Alias: None
Product: quanta
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: András Manţia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-05-14 13:42 UTC by Dan Ballance
Modified: 2007-10-03 15:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Ballance 2007-05-14 13:42:17 UTC
Version:           3.5.6 (using KDE KDE 3.5.6)
Installed from:    Ubuntu Packages
OS:                Linux

This bug is repeatable (on my setup at least). Here is how to recreate:

Here is the exact code in the css file at the start, including white space:

#links a {
    float:left;
    background:url(../img/tab-left.gif) no-repeat left top;
    margin:0;
    padding:0 0 0 9px;
    text-decoration:none;
  }

#links a span {
float:left;
display:block;
background:url(../img/tab-right.gif) no-repeat right top;
padding:3px 14px 3px 5px;
font-weight:bold;
color:#3B3B3B;
}

/* Commented Backslash Hack hides rule from IE5-Mac \*/
#links a span {
    float:none;
  }
/* End IE5-Mac hack */



Then I go into CSS Selector Dialogue. Add #test. Ok. Back at the file code. Here is what is left in my file:

#links a {
    float:left;
    background:url(../img/tab-left.gif) no-repeat left top;
    margin:0;
    padding:0 0 0 9px;
    text-decoration:none;
  }

/* Commented Backslash Hack hides rule from IE5-Mac \*/

#links a span {
    float:none;
  }

/* End IE5-Mac hack */

Now there is only one "#links a span" entry. I guess the bug maybe to do with repeating the same selector in a file? It is needed here to overwrite a setting for the ie5-mac hack.
Comment 1 András Manţia 2007-10-03 15:07:01 UTC
SVN commit 720675 by amantia:

Do not lose CSS selectors after editing inside the dialog if they are repeated. 
Note: preview for the further instance of the same selector will most probably not work correctly.

BUG: 145413


 M  +2 -0      ChangeLog  
 M  +6 -3      components/csseditor/cssselector.cpp  
 M  +12 -0     components/csseditor/stylesheetparser.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=720675