Do not lose CSS selectors after editing inside the dialog if they are repeated. Note: preview for the further instance of the same selector will most probably not work correctly.

BUG: 145413